Fix Redis transactions failing in connection-less mode
Use dedicated connections for Redis operations that require
WATCH/MULTI/EXEC transactions, since the pooled RedisAPI does
not support stateful transactional commands. Also remove the
api.close() call from stop() as the RedisAPI lifecycle is
managed by the Quarkus CDI container.